[package]
name = "hamrah"
version = "0.1.0"
edition = "2024"
description = "Content-addressed folder sync — keep a directory identical across your machines."
license = "MIT"

[dependencies]
dirs = "6.0.0"
notify = "8.2.0"
rcgen = "0.14.8"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = "0.26.4"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
